[package]
name = "qrfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
fuse = "0.3.1"
time = "0.1"
serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
qrcode = "0.12.0"
quircs = "0.10.0"
image = "0.23"
native-dialog = "0.6.3"
ncurses = "5.86.0"